# langchain-progai

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
langchain_progai/chat/: __init__.py  chat.py  chat_model.py  llamacpp_chat.py
langchain_progai/completion/: __init__.py  llamacpp.py
langchain_progai/config/: __init__.py  config.py  config.yaml.template  default_config.yaml
langchain_progai/embedding/: __init__.py  embed.py  rerank.py
langchain_progai/parameters/: __init__.py  model_parameters.py
tests/chat/: Interactive-1.ipynb  test_chat.py
tests/config/: test_config.py
tests/embedding/: test_embed.py  test_rerank.py
